<resources>
    <string name="app_name">MyBank</string>
    <string name="add_todo_title">ADD SKILL</string>
    <string name="todo_number">Skill %1$s</string>
    <string name="todo_title">Title</string>
    <string name="email_address">email@address</string>
    <string name="nickname">Nickname</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="keyword">Title</string>
    <string name="short_description">Short description</string>
    <string name="default_web_client" translatable="false">509920197029-bei5glek4tfdpmf81ertqddtv7kbivka.apps.googleusercontent.com</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">nav_image</string>
    <string name="nav_header_title">Your name</string>
    <string name="nav_header_subtitle">Your email</string>
    <string name="description_help">
        testo da definire
    </string>
    <string name="help">hh</string>
    <string name="guideProfile"><b>Welcome to our app!</b> The first step is to fill in your profile,
        with your best picture and some other information about yourself. Make sure you
        add some skills - these will represent the jobs that you are offering to the other users.

        </string>
    <string name="guideSlot">Now you have to create some temporal slot for your offers.
        Make sure to keep your slots updated, in order to be always free during the time of your offer.
        Moreover, one slot should be at least half an hour long.</string>
    <string name="guideHome">In the <b>Home</b> section you can see the offers made from other users.\nClick on one of them to see its details: you can see the time at which the owner of the slot is available.
        Also, from the description of the time slot you can see the profile of the owner,
        with their rating and the reviews from other users. As a <b>gift for you</b>,
        we put <b>2 hours of credit</b> in your account: <b>start spending your time by hiring someone to do a job for you!</b></string>
    <string name="guideChat">In the section <b>Chats</b> you can see all your messages, both the ones that other users
        sent to you in order to hire you, and the ones that you sent to them.
        If you want to be hired by someone, you must write them a message.
        Then the other user can accept or deny your request.</string>
    <string name="guideAssignedSlot">In order to remind you the slots you have sent a message for, or the slots
    someone else has requested to you, you can go to the <b>Completed jobs</b> section.</string>
</resources>