<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->
<!--androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText"-->

    <!--this the navigation view which draws
        and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_show_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:src="@drawable/default_user_profile_picture_hvoncb"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="5"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:visibility="visible" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/full_name"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_blue"

        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_weight="1"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/nickname"
            android:textColor="@color/dark_blue"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_weight="1"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-condensed-medium"
            android:inputType="textWebEmailAddress|textEmailAddress"
            android:text="@string/email_address"
            android:textColor="@color/dark_blue"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/nickname"
            app:layout_constraintVertical_weight="1"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/location"
            android:textColor="@color/dark_blue"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/recycler"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_weight="1"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="16dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintVertical_weight="5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--/androidx.drawerlayout.widget.DrawerLayout-->




