<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guideTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="GUIDE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/guideProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/guideProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@string/guideProfile"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideTitle" />

            <Button
                android:id="@+id/buttonProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to your profile"
                app:layout_constraintBottom_toTopOf="@+id/guideSlot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideProfile" />

            <TextView
                android:id="@+id/guideSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:text="@string/guideSlot"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSlot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonProfile" />

            <Button
                android:id="@+id/buttonSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to your slots"
                app:layout_constraintBottom_toTopOf="@+id/guideHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideSlot"
                tools:layout_editor_absoluteX="155dp" />

            <TextView
                android:id="@+id/guideHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="6dp"
                android:text="@string/guideHome"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSlot" />

            <Button
                android:id="@+id/buttonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to the Home"
                app:layout_constraintBottom_toTopOf="@+id/guideHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideHome"
                tools:layout_editor_absoluteX="155dp" />

            <TextView
                android:id="@+id/guideChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:text="@string/guideChat"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonChat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHome" />

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to the chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideChat" />

            <TextView
                android:id="@+id/guideJobDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="7dp"
                android:paddingTop="10dp"
                android:paddingEnd="7dp"
                android:text="@string/guideAssignedSlot"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonChat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHome" />

            <Button
                android:id="@+id/buttonJobDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to your interested slots"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideChat" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

